# satoshiguesser

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
cuda/: toy_search.cu
opencl/: key_benchmark.cl
src/: main.rs
