[package]
name = "satoshi-guesser"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[features]
default = []
cuda-toy = []

[dependencies]
bs58 = { version = "0.5", features = ["check"] }
rand = "0.8"
rand_chacha = "0.3"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["global-context"] }

[target.'cfg(target_env = "msvc")'.dependencies]
sha2 = "0.10"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
